namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-electronic-monitoring-data-insights-preprod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-electronic-monitoring-data-insights-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "hmpps_electronic_monitoring_digital_insights_preprod"
    cloud-platform.justice.gov.uk/slack-alert-channel: "hmpps_electronic_monitoring_data_insights_alerts_noprod"
    cloud-platform.justice.gov.uk/application: "Electronic Monitoring for probation officers"
    cloud-platform.justice.gov.uk/owner: "HMPPS Electronic Monitoring for Probation: john.asafo@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-electronic-monitoring-data-insights-api,https://github.com/ministryofjustice/hmpps-electronic-monitoring-data-insights-ui"
    cloud-platform.justice.gov.uk/team-name: "hmpps-em-probation"
